# ultimate_mcp_server_windows

./: .env  .env.example  .env.secrets.example  .gitignore  CONTRIBUTING.md  Dockerfile  ENVIRONMENT_SETUP.md  INSTALLATION.md  MANIFEST.in  README.md  README.md.new  README.md.old  TASK_SCHEDULER_SETUP.md  TODO.md  UPGRADE.md  WINDOWS_SETUP.md  activate_and_run.bat  activate_and_run.sh  activate_and_run_scheduled.bat  activate_and_run_scheduled.ps1  additional_features.md  check_api_keys.py  check_mcp_server.sh  completion_support.py  debug_chunking.py  docker-compose.yml  empirically_measured_model_speeds.json  error_handling.py  example_structured_tool.py  fix_env.sh  fix_env_problems.py  list_models.py  main.py  marqo_index_config.json.example  mcp_config_for_cursor.json  mcp_python_lib_docs.md  mcp_tool_context_estimator.py  model_preferences.py  pyproject.toml  pytest.ini  (+28 more)
.cursor/: settings.json
.github/: .env.secrets.example
.github/workflows/: ci.yml  test.yml
browser_demo_outputs/reports/: browser_automation_report_20250414_214657.html  browser_automation_report_20250414_214657.md  browser_automation_report_20250415_081832.html  browser_automation_report_20250415_081832.md
cache/disk_cache/: cache.db-shm  cache.db-wal
docs/: README.md  mcp_protocol_schema_2025-03-25_version.json  unified_memory_system_technical_analysis.md
examples/: advanced_agent_flows_using_unified_memory_system_demo.py  advanced_extraction_demo.py  advanced_unified_memory_system_demo.py  advanced_vector_search_demo.py  analytics_reporting_demo.py  audio_transcription_demo.py  basic_completion.py  browser_automation_demo.py  cache_demo.py  claude_integration.py  claude_integration_demo.py  compare_synthesize_demo.py  cost_optimization.py  diagnostics_for_ollama.py  docstring_refiner_demo.py  document_conversion_and_processing_demo.py  document_conversion_demo.py  document_processing.py  entity_relation_graph_demo.py  filesystem_operations_demo.py  grok_integration_demo.py  html_to_markdown_demo.py  lightpanda_browser_tool_demo.py  local_text_tools_demo.py  marqo_fused_search_demo.py  measure_model_speeds.py  meta_api_demo.py  multi_provider_demo.py  ollama_integration_demo.py  prompt_templates_demo.py  python_sandbox_demo.py  rag_example.py  research_workflow_demo.py  simple_completion_demo.py  smart_browser_demo.py  sql_database_demo.py  sql_database_interactions_demo.py  test_code_extraction.py  test_transaction.py  text_classification_demo.py  (+8 more)
examples/data/: Steve_Jobs_Introducing_The_iPhone_compressed.md
examples/old/: browser_automation_demo.py  lightpanda_browser_demo.py  sql_database_interactions_demo.py
examples/sample/: contract_link.txt
llm_gateway/: config.py  constants.py  exceptions.py  server.py
llm_gateway/cli/: __init__.py  commands.py  helpers.py  main.py
llm_gateway/clients/: completion_client.py
llm_gateway/core/: __init__.py  server.py
llm_gateway/core/models/: __init__.py  entities.py  knowledge_base.py  requests.py  responses.py  tournament.py
llm_gateway/core/providers/: __init__.py  anthropic.py  base.py  deepseek.py  gemini.py  grok.py  openai.py  openrouter.py
llm_gateway/core/tournaments/: tasks.py  utils.py
llm_gateway/mcp/: server.py
llm_gateway/mcp/handlers/: knowledge_base.py
llm_gateway/services/: __init__.py  cache.py  prompts.py
llm_gateway/services/analytics/: __init__.py  metrics.py  reporting.py
llm_gateway/tools/: __init__.py  audio_transcription.py  base.py  browser_automation.py  cognitive_and_agent_memory.py  completion.py  docstring_refiner.py  document.py  entity_relation_graph.py  excel_spreadsheet_automation.py  extraction.py  filesystem.py  marqo_fused_search.py  meta.py  meta_api_tool.py  ocr_tools.py  optimization.py  provider.py  rag.py  sql_database_interactions.py  text_classification.py  text_redline_tools.py  tournament.py  use_local_text_tools.py
llm_gateway/utils/: __init__.py  async_utils.py  display.py  logging.py  parsing.py  security.py  text.py
scripts/: README.md  list_models.py  run_all_demo_scripts_and_check_for_errors.py  setup_release.py
storage/: .ums_db_instance_id
storage/smart_browser_internal/: locator_cache.db
tests/: README.md  conftest.py  custom_venv.py  test_server_startup.py
tests/environment/: test_env_check.py  test_python_version_check.py  test_python_version_simple.py  test_python_version_warning.py
tests/integration/: test_server.py  test_workflow.py
tests/manual/: README.md  debug_mcp_connection.py  simple_mcp_test.py  smart_mcp_test.py  test_environment_validation.py  test_extraction.py  test_get_all_tools_status.py
tests/unit/: test_cache.py  test_providers.py  test_tools.py
ultimate_mcp_server/: __init__.py  __main__.py  config.py  constants.py  exceptions.py  graceful_shutdown.py  server.py  working_memory_api.py
ultimate_mcp_server/cli/: __init__.py  commands.py  helpers.py  main.py  typer_cli.py
ultimate_mcp_server/clients/: completion_client.py  rag_client.py
ultimate_mcp_server/core/: __init__.py  server.py
ultimate_mcp_server/examples/: ollama_test.py  tool_status_integration.py
ultimate_mcp_server/services/: __init__.py  cache.py  document.py  prompts.py
ultimate_mcp_server/tools/: __init__.py  audio_transcription.py  base.py  browser_automation.py  cognitive_and_agent_memory.py  completion.py  docstring_refiner.py  document.py  document_conversion_and_processing.py  document_conversion_tool.py  entity_relation_graph.py  excel_spreadsheet_automation.py  extraction.py  filesystem.py  html_to_markdown.py  marqo_fused_search.py  meta.py  meta_api_tool.py  ocr_tools.py  optimization.py  provider.py  pyodide_boot_template.html  python_js_sandbox.py  python_sandbox.py  smart_browser.py  sql_database_interactions.py  sql_databases.py  text_classification.py  text_redline_tools.py  tournament.py  ums_explorer.html  unified_memory_system.py  use_local_text_tools.py
ultimate_mcp_server/utils/: async_utils.py  completion_support.py  display.py  environment.py  lazy_imports.py  parse_yaml.py  parsing.py  text.py  tool_annotations.py  tool_status.py
(+49 files in other folders)
